# Ykna

./: CMakeLists.txt  README.md  main.cpp
Controller/: card.c  card.h  createDatabase.c  deck.c  deck.h  init.sql
View/: main.cpp
database/: createDatabase.c  createDatabase.h  init.sql
front/: front.cpp  front.h
